[package]
name = "scrb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102" }
bpaf = { version = "0.9.19", features = ["derive"] }
dialoguer = { version = "0.12.0" }
regex = { version = "1.12.4" }
reqwest = { version = "0.13.4", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
dirs = { version = "6.0.0" }
toml = { version = "1.1.2" }
urlencoding = { version = "2.1.3" }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "symbols"
